[gd_scene load_steps=31 format=2]

[ext_resource path="res://Art/Manlet/idle tired1-Sheet 25-export.png" type="Texture" id=1]
[ext_resource path="res://Art/Manlet/running boi right-Sheet25.png" type="Texture" id=2]
[ext_resource path="res://Manlet.gd" type="Script" id=3]
[ext_resource path="res://Art/Manlet/jump/jump in air up (3)aseprite-export.png" type="Texture" id=4]
[ext_resource path="res://Art/Manlet/jump/jump going down (loopable) (4)-export.png" type="Texture" id=5]
[ext_resource path="res://Art/Manlet/jump/jump start (1)-export.png" type="Texture" id=6]
[ext_resource path="res://Art/Manlet/jump/jump in air (2)intro.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 28 ) ],
"loop": false,
"name": "JumpStart",
"speed": 40.0
}, {
"frames": [ SubResource( 3 ), SubResource( 5 ) ],
"loop": true,
"name": "AirDown",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "AirUp",
"speed": 12.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Running",
"speed": 18.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[node name="Manlet" type="KinematicBody2D"]
position = Vector2( 440.97, 361.57 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 27 )
animation = "AirDown"
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 1.5, 1.5 )
scale = Vector2( 0.33, 0.33 )
polygon = PoolVector2Array( 38, 90, -46, 90, -46, -70, 38, -70 )

[node name="WallJumpTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="WallJumpTimer" to="." method="_on_Timer_timeout"]
